@@ -1,21 +1,30 @@
 package net.ripe.rpki.monitor.expiration.fetchers;
 
 import com.google.common.base.Strings;
+import io.netty.channel.ChannelOption;
+import io.netty.handler.timeout.ReadTimeoutHandler;
+import io.netty.handler.timeout.WriteTimeoutHandler;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import net.ripe.rpki.monitor.config.AppConfig;
 import net.ripe.rpki.monitor.config.RrdpConfig;
 import net.ripe.rpki.monitor.metrics.FetcherMetrics;
 import net.ripe.rpki.monitor.publishing.dto.RpkiObject;
-import net.ripe.rpki.monitor.util.Http;
 import net.ripe.rpki.monitor.util.Sha256;
 import net.ripe.rpki.monitor.util.XML;
+import net.ripe.rpki.monitor.util.http.ConnectToAddressResolverGroup;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.client.reactive.ReactorClientHttpConnector;
+import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.reactive.function.client.WebClientRequestException;
 import org.w3c.dom.Document;
+import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
+import reactor.netty.http.client.HttpClient;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.ParserConfigurationException;
@@ -24,8 +33,10 @@ import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.time.Duration;
 import java.util.Base64;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -37,14 +48,20 @@ import static com.google.common.base.Verify.verifyNotNull;
 public class RrdpFetcher implements RepoFetcher {
 
     private final RrdpConfig.RrdpRepositoryConfig config;
-    private final Http http;
+
+    private final WebClient httpClient;
     private final FetcherMetrics.RRDPFetcherMetrics metrics;
 
     private String lastSnapshotUrl;
 
-    public RrdpFetcher(RrdpConfig.RrdpRepositoryConfig config, AppConfig appConfig, FetcherMetrics fetcherMetrics) {
+    public RrdpFetcher(
+            RrdpConfig.RrdpRepositoryConfig config,
+            AppConfig appConfig,
+            FetcherMetrics fetcherMetrics,
+            WebClient.Builder webclientBuilder) {
         this.config = config;
-        this.http = new Http(String.format("rpki-monitor %s", appConfig.getInfo().gitCommitId()), config.getConnectTo());
+        this.httpClient = configureWebclient(webclientBuilder, config.getConnectTo(), "rpki-monitor %s".formatted(appConfig.getInfo().gitCommitId()));
+
         this.metrics = fetcherMetrics.rrdp(
                 Strings.isNullOrEmpty(config.getOverrideHostname()) ?
                         config.getNotificationUrl() :
@@ -53,9 +70,48 @@ public class RrdpFetcher implements RepoFetcher {
         log.info("RrdpFetcher({}, {}, {})", config.getName(), config.getNotificationUrl(), config.getOverrideHostname());
     }
 
+    private WebClient configureWebclient(WebClient.Builder builder, Map<String, String> connectTo, String userAgent) {
+        // remember: read and write timeouts are per read, not for a request.
+        return builder
+                .clientConnector(new ReactorClientHttpConnector(
+                    HttpClient.create()
+                        .resolver(new ConnectToAddressResolverGroup(connectTo))
+                        .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 5000)
+                        .responseTimeout(Duration.ofMillis(5000))
+                        .doOnConnected(conn ->
+                                conn.addHandlerLast(new ReadTimeoutHandler(5000, TimeUnit.MILLISECONDS))
+                                    .addHandlerLast(new WriteTimeoutHandler(5000, TimeUnit.MILLISECONDS))
+                        )
+                    )
+                )
+                .defaultHeader(HttpHeaders.USER_AGENT, userAgent)
+                .build();
+    }
+
+    private byte[] blockForHttpGetRequest(String uri, Duration timeout) {
+        return httpClient.get().uri(uri).retrieve().bodyToMono(byte[].class).block(timeout);
+    }
+
     @Override
     public Meta meta() {
         return new Meta(config.getName(), config.getNotificationUrl());
+    }
+
+    /**
+     * Load snapshot and validate hash
+     */
+    private byte[] loadSnapshot(String snapshotUrl, String desiredSnapshotHash) throws SnapshotStructureException {
+        log.info("loading {} RRDP snapshot from {}", config.getName(), snapshotUrl);
+
+        final byte[] snapshotBytes = blockForHttpGetRequest(snapshotUrl, config.getTotalRequestTimeout());
+        verifyNotNull(snapshotBytes);
+
+        final String realSnapshotHash = Sha256.asString(snapshotBytes);
+        if (!realSnapshotHash.equalsIgnoreCase(desiredSnapshotHash)) {
+            throw new SnapshotStructureException(snapshotUrl, "with len(content) = %d had sha256(content) = %s, expected %s".formatted(snapshotBytes.length, realSnapshotHash, desiredSnapshotHash));
+        }
+
+        return snapshotBytes;
     }
 
     @Override
@@ -63,9 +119,9 @@ public class RrdpFetcher implements RepoFetcher {
         try {
             final DocumentBuilder documentBuilder = XML.newDocumentBuilder();
 
-            final String notificationXml = http.fetch(config.getNotificationUrl());
-            verifyNotNull(notificationXml);
-            final Document notificationXmlDoc = documentBuilder.parse(new ByteArrayInputStream(notificationXml.getBytes()));
+            final byte[] notificationBytes = blockForHttpGetRequest(config.getNotificationUrl(), config.getTotalRequestTimeout());
+            verifyNotNull(notificationBytes);
+            final Document notificationXmlDoc = documentBuilder.parse(new ByteArrayInputStream(notificationBytes));
 
             final int notificationSerial = Integer.parseInt(notificationXmlDoc.getDocumentElement().getAttribute("serial"));
 
@@ -80,19 +136,11 @@ public class RrdpFetcher implements RepoFetcher {
             }
             lastSnapshotUrl = snapshotUrl;
 
-            log.info("loading {} RRDP snapshot from {}", config.getName(), snapshotUrl);
+            final byte[] snapshotContent = loadSnapshot(snapshotUrl, desiredSnapshotHash);
 
-            final String snapshotXml = http.fetch(snapshotUrl);
-            assert snapshotXml != null;
-            final byte[] bytes = snapshotXml.getBytes();
-
-            final String realSnapshotHash = Sha256.asString(bytes);
-            if (!realSnapshotHash.equalsIgnoreCase(desiredSnapshotHash)) {
-                throw new SnapshotStructureException(snapshotUrl, "with len(content) = %d had sha256(content) = %s, expected %s".formatted(bytes.length, realSnapshotHash, desiredSnapshotHash));
-            }
-
-            final Document snapshotXmlDoc = documentBuilder.parse(new ByteArrayInputStream(bytes));
+            final Document snapshotXmlDoc = documentBuilder.parse(new ByteArrayInputStream(snapshotContent));
             var doc = snapshotXmlDoc.getDocumentElement();
+
             // Check attributes of root snapshot element (mostly: that serial matches)
             var querySnapshot = XPathFactory.newDefaultInstance().newXPath().compile("/snapshot");
             var snapshotNodes = (NodeList) querySnapshot.evaluate(doc, XPathConstants.NODESET);
@@ -102,60 +150,81 @@ public class RrdpFetcher implements RepoFetcher {
                 throw new SnapshotStructureException(snapshotUrl, "No <snapshot>...</snapshot> root element found");
             } else {
                 var item = snapshotNodes.item(0);
-                var snapshotSerial = Integer.valueOf(item.getAttributes().getNamedItem("serial").getNodeValue());
+                int snapshotSerial = Integer.parseInt(item.getAttributes().getNamedItem("serial").getNodeValue());
 
                 if (notificationSerial != snapshotSerial) {
                     throw new SnapshotStructureException(snapshotUrl, "contained serial=%d, expected=%d".formatted(snapshotSerial, notificationSerial));
                 }
             }
 
-            var queryPublish = XPathFactory.newDefaultInstance().newXPath().compile("/snapshot/publish");
-            final NodeList publishedObjects = (NodeList) queryPublish.evaluate(doc, XPathConstants.NODESET);
+            var processPublishElementResult = processPublishElements(doc);
 
-            var decoder = Base64.getDecoder();
-            var collisionCount = new AtomicInteger();
-
-            var objects = IntStream
-                    .range(0, publishedObjects.getLength())
-                    .mapToObj(publishedObjects::item)
-                    .map(item -> {
-                        var objectUri = item.getAttributes().getNamedItem("uri").getNodeValue();
-                        var content = item.getTextContent();
-
-                        try {
-                            // Surrounding whitespace is allowed by xsd:base64Binary. Trim that
-                            // off before decoding. See also:
-                            // https://www.w3.org/TR/2004/PER-xmlschema-2-20040318/datatypes.html#base64Binary
-                            var decoded = decoder.decode(content.trim());
-                            return ImmutablePair.of(objectUri, new RpkiObject(decoded));
-                        } catch (RuntimeException e) {
-                            log.error("cannot decode object data for URI {}\n{}", objectUri, content);
-                            throw e;
-                        }
-                    })
-                    // group by url to detect duplicate urls: keeps the first element, will cause a diff between
-                    // the sources being monitored.
-                    .collect(Collectors.groupingBy(Pair::getLeft))
-                    // invariant: every group has at least 1 item
-                    .entrySet().stream()
-                    .map((item) -> {
-                        if (item.getValue().size() > 1) {
-                            log.warn("Multiple objects for {}, keeping first element: {}", item.getKey(), item.getValue().stream().map(coll -> Sha256.asString(coll.getRight().getBytes())).collect(Collectors.joining(", ")));
-                            collisionCount.addAndGet(item.getValue().size() - 1);
-                            return item.getValue().get(0);
-                        }
-                        return item.getValue().get(0);
-                    })
-                    .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
-
-            metrics.success(notificationSerial, collisionCount.get());
-            return objects;
+            metrics.success(notificationSerial, processPublishElementResult.collisionCount);
+            return processPublishElementResult.objects;
         } catch (SnapshotStructureException e) {
             metrics.failure();
             throw e;
         } catch (ParserConfigurationException | XPathExpressionException | SAXException | IOException | NumberFormatException e) {
+            // recall: IOException, ConnectException are subtypes of IOException
             metrics.failure();
             throw new FetcherException(e);
+        } catch (IllegalStateException e) {
+            if (e.getMessage().contains("Timeout")) {
+                metrics.timeout();
+            }
+            throw e;
+        } catch (WebClientRequestException e) {
+            // TODO: Exception handling could be a lot nicer. However we are mixing reactive and synchronous code,
+            //  and a nice solution probably requires major changes.
+            log.error("Web client request exception, only known cause is a timeout.", e);
+            metrics.timeout();
+            throw e;
         }
     }
+
+    private ProcessPublishElementResult processPublishElements(Element doc) throws XPathExpressionException {
+        var queryPublish = XPathFactory.newDefaultInstance().newXPath().compile("/snapshot/publish");
+        final NodeList publishedObjects = (NodeList) queryPublish.evaluate(doc, XPathConstants.NODESET);
+
+        var collisionCount = new AtomicInteger();
+
+        var decoder = Base64.getDecoder();
+
+        var objects = IntStream
+                .range(0, publishedObjects.getLength())
+                .mapToObj(publishedObjects::item)
+                .map(item -> {
+                    var objectUri = item.getAttributes().getNamedItem("uri").getNodeValue();
+                    var content = item.getTextContent();
+
+                    try {
+                        // Surrounding whitespace is allowed by xsd:base64Binary. Trim that
+                        // off before decoding. See also:
+                        // https://www.w3.org/TR/2004/PER-xmlschema-2-20040318/datatypes.html#base64Binary
+                        var decoded = decoder.decode(content.trim());
+                        return ImmutablePair.of(objectUri, new RpkiObject(decoded));
+                    } catch (RuntimeException e) {
+                        log.error("cannot decode object data for URI {}\n{}", objectUri, content);
+                        throw e;
+                    }
+                })
+                // group by url to detect duplicate urls: keeps the first element, will cause a diff between
+                // the sources being monitored.
+                .collect(Collectors.groupingBy(Pair::getLeft))
+                // invariant: every group has at least 1 item
+                .entrySet().stream()
+                .map(item -> {
+                    if (item.getValue().size() > 1) {
+                        log.warn("Multiple objects for {}, keeping first element: {}", item.getKey(), item.getValue().stream().map(coll -> Sha256.asString(coll.getRight().getBytes())).collect(Collectors.joining(", ")));
+                        collisionCount.addAndGet(item.getValue().size() - 1);
+                        return item.getValue().get(0);
+                    }
+                    return item.getValue().get(0);
+                })
+                .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
+
+        return new ProcessPublishElementResult(objects, collisionCount.get());
+    }
+
+    record ProcessPublishElementResult(Map<String, RpkiObject> objects, int collisionCount) {};
 }
